Bug 1970909: Call reveal algorithm for callers of find algorithm instead of the find algorithm itself. r=emilio

The previous behavior caused all sorts of edge-casey issues:
Find-in-page would open all <details> or hidden=until-found elements
which contain the search string. Therefore, accordions would open
one after another, and the last one would be opened instead of the one
with the match.

Finding a text fragment on a page would open all details/hidden=until-found  elements
which contain any of a context term of the text directive.

Creating a text fragment link (context menu -> Copy Link to Highlight) would open
all hidden=until-found/details elements which contain the target range.

The reason for this behavior was `nsFind::Find()` calling the reveal algorithm unconditionally.

This patch fixes this by only calling the reveal algorithm at the appropriate places,
which is inside the find-in-page backend (`nsTypeAheadFind.cpp`),
in the `window.find()` backend (`nsWebBrowserFind.cpp`),
and in the text fragment finder backend (`TextDirectiveFinder.cpp`).

In addition, this patch refactors the tests for finding hidden=until-found / <details> elements:
- test_nsFind.html only tests that text inside hidden=until-found or <details> can be found
- New tests in `browser_findbar_hidden_beforematch.js` and `test_find.html` ensure that
  the elements are visible after they are found, and that `beforematch` is fired for hidden=until-found elements
- New tests have been added for finding and creating text fragments to ensure that only the correct elements are revealed.

Differential Revision: https://phabricator.services.mozilla.com/D269160